# esp32_S3_wifi_provisioning_using_c_example

./: CMakeLists.txt  KOTLIN_INTEGRATION.md  README.md  sdkconfig.defaults
config/: partitions.csv  sdkconfig.defaults
docs/: PROJECT_STRUCTURE.md  README.md  UUID_MAPPING.md
main/: CMakeLists.txt  ble_provisioning.c  ble_provisioning.h  cloud_provisioning.c  cloud_provisioning.h  ezo_sensor.c  ezo_sensor.h  http_server.c  main.c  mdns_service.c  mqtt_telemetry.c  mqtt_telemetry.h  reset_button.c  reset_button.h  sensor_manager.c  sensor_manager.h  wifi_manager.c  wifi_manager.h
main/web/: dashboard.js  index.html
